# nes

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: bus.rs  cartridge.rs  consts.rs  cpu.rs  debug.rs  disassembler.rs  disk.rs  emulator.rs  helpers.rs  instructions.rs  main.rs  mapper.rs  nes.rs  peripheral.rs  ppu.rs  renderer.rs
src/audio/: audio.rs
src/instructions/: instruction.rs  instruction_functions.rs  mod.rs
src/instructions/instruction_table/: instruction_table.rs  mod.rs
src/ppu/: README.md  control.rs  debug.rs  helpers.rs  mod.rs  read.rs  statics.rs  structures.rs  tests.rs  write.rs
src/ppu/tables/: colors.rs
test-bins/basic/: basic.src
test-roms/cpu/: expected.txt
