[package]
name = "nes-rs"
version = "0.1.0"
authors = ["Mathieu Robitaille <mathieujrobitaille@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
olc_pixel_game_engine =  { path = "crates/olcPixelGameEngine-rs" }
lazy_static = "*"
bitflags = "*"
serde = "*"