[package]
name = "nes-rs"
version = "0.1.0"
authors = ["Mathieu Robitaille <mathieujrobitaille@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
bitflags = "*"
serde = "*"
bitfield = { path = "crates/rs-bitfield" }
glium = { version = "0.32.1", default-features = true }
image = "0.23"
imgui-glium-renderer = "*"
imgui-winit-support = "*"
rand = "*"
imgui = { version = "0.10", features = ["tables-api"] }
anyhow = "*"


[profile.release]
debug = true
